se modifico la ruta de img

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 <body>
     <!-- html para la pagina  -->
-    <img class="logo" src="/img/Logo@2x.png" alt="logo alura">
+    <img class="logo" src="img/Logo@2x.png" alt="logo alura">
     <div class="first">
         <textarea name="encript" id="enc" cols="42" rows="15"  style="resize: none;" required placeholder="Ingrese el texto aqui"></textarea>
         <div class="box">
-            <p class="adv"> <img class="imga" src="/img/bi_exclamation-circle-fill-1.png">  Solo letras minúsculas y sin acentos</p>
+            <p class="adv"> <img class="imga" src="img/bi_exclamation-circle-fill-1.png">  Solo letras minúsculas y sin acentos</p>
             <input class="en" id="enb"  type="submit" value="Encriptar">
             <input class="de" id="deb" type="submit" value="Desencriptar">
         </div>
     </div>
 
     <div class="second">
-        <img class="toy" id="jug" src="/img/Muñeco.png" alt="muneco alura">
+        <img class="toy" id="jug" src="img/Muñeco.png" alt="muneco alura">
         <p class="no" id="non" >Ningún mensaje fue <br>encontrado</p>
         <textarea name="desencript" id="des" cols="40" rows="11"  style="resize: none;" required placeholder="Ingresa el texto que desees encriptar o desencriptar."></textarea>
         <input class="copy" id="copy" type="submit" value="Copiar">
