--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
         // verifica si la funcion esta vacia y verifica cual de los 2 textarea contiene texto para pasar el dato a p
         let p ;
                 if (tes.value.trim() !== '') {
-                    p = tes.value;
-                } else {
+                    tp = tes.value;
+                } else if (tes.value.trim() !== '') {
+                    tp = tes.value;
+                }else {
                     tex.value = ""
                     Img.style.display = "block";
                     pa.style.display = "block"
@@ -110,6 +112,8 @@
         // verifica si la funcion esta vacia y verifica cual de los 2 textarea contiene texto para pasar el dato a tp
         let tp;
         if (tes.value.trim() !== '') {
+            tp = tes.value;
+        } else if (tes.value.trim() !== '') {
             tp = tes.value;
         } else {
             tex.value = ""
