--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         tex.style.height = "70%";
         tex.style.fontSize = "25px"
         cop.style.display = "inline-block";
-        return false;
+        return tes.value;
     }
     //copiar
      boc.addEventListener('click', () => {
