--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         pt=""
         // verifica si la funcion esta vacia y verifica cual de los 2 textarea contiene texto para pasar el dato a tp
         let tp;
-        if (tes.value.trim() !== '') {
+        if (tes.value !== '') {
             tp = tes.value;
         }else {
             Img.style.display = "block";
