--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         pal=""
         // verifica si la funcion esta vacia y verifica cual de los 2 textarea contiene texto para pasar el dato a p
         let p ;
-        if (tes.value.trim() !== '') {
+        if (tes.value !== '') {
             p = tes.value;
         }else {
             Img.style.display = "block";
