--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         if (tes.value !== '') {
             p = tes.value;
         }else {
+            tex.value = ""
             Img.style.display = "block";
             pa.style.display = "block"
             tex.style.top = "" 
@@ -111,6 +112,7 @@
         if (tes.value !== '') {
             tp = tes.value;
         }else {
+            tex.value = ""
             Img.style.display = "block";
             pa.style.display = "block"
             tex.style.top = "" 
