--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         pal=""
         // verifica si la funcion esta vacia y verifica cual de los 2 textarea contiene texto para pasar el dato a p
         let p ;
-        if (tes.value !== '') {
+        if (tes.value.trim() !== '') {
             p = tes.value;
         }else {
             tex.value = ""
@@ -109,7 +109,7 @@
         pt=""
         // verifica si la funcion esta vacia y verifica cual de los 2 textarea contiene texto para pasar el dato a tp
         let tp;
-        if (tes.value !== '') {
+        if (tes.value.trim() !== '') {
             tp = tes.value;
         }else {
             tex.value = ""
