--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
         let tp;
         if (tes.value.trim() !== "") {
             tp = tes.value;
-        }else{
+        }else  if (tex.value.trim() !== "") {
+            tp = tes.value;
+        }
+        else{
             tex.value = ""
             Img.style.display = "block";
             pa.style.display = "block"
