--- a/index.html
+++ b/index.html
@@ -112,10 +112,7 @@
         let tp;
         if (tes.value.trim() !== "") {
             tp = tes.value;
-        }else  if (tex.value.trim() !== "") {
-            tp = tes.value;
-        }
-        else{
+        }else{
             tex.value = ""
             Img.style.display = "block";
             pa.style.display = "block"
