--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     let vocales = ["a","i","u","e","o"];
     let abc = ["b","c","d","f","g","h","j","k","l","m","n","p","q","r","s","t","v","w","x","y","z"," ","  ",".",",","-","!","?","@","a","i","u","e","o"];
     let pt = "";
-    let tp = "";
     let ps = "";
     let pal = "";
 
@@ -106,8 +105,8 @@
     bon.addEventListener("click", miFuncion2);
 
     function miFuncion2() {
-        pt=""
-        pal = ""
+        pt="";
+        pal ="";
         // verifica si la funcion esta vacia y verifica cual de los 2 textarea contiene texto para pasar el dato a tp
         let tp;
         if (tes.value.trim() !== "") {
