--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     let cop = document.getElementById("copy")
 
     let vocales = ["a","i","u","e","o"];
-    let abc = ["b","c","d","f","g","h","j","k","l","m","n","p","q","r","s","t","v","w","x","y","z"," ","  ",".",",","-","!","?","@","a","i","u","e","o"];
+    let abc = ["b","c","d","f","g","h","j","k","l","m","n","ñ","p","q","r","s","t","v","w","x","y","z"," ","  ",".",",","-","!","?","@","a","i","u","e","o"];
     let pt = "";
     let ps = "";
     let pal = "";
