--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
         tex.select();
         document.execCommand('copy');
     });
-
+    tes.value = pal;
+        tex.value = tes.value;
 </script>
 
 </html>
