--- a/index.html
+++ b/index.html
@@ -106,11 +106,10 @@
 
     function miFuncion2() {
         pt="";
-        pal ="";
         // verifica si la funcion esta vacia y verifica cual de los 2 textarea contiene texto para pasar el dato a tp
         let tp;
         if (tes.value.trim() !== "") {
-            tp = tex.value;
+            tp = tes.value;
         }else{
             tex.value = ""
             Img.style.display = "block";
